--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,10 @@
 
 .banner {
     background-image: url('../images/banner/banner3.png');
-    background-size: contain;
+    background-size: cover;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 700px;
     left: 0px;
     top: 0px;
 
@@ -21,8 +21,8 @@
 .banner-text {
     position: absolute;
     height: 228px;
-    left: 845px;
-    top: 216px;
+    left: 750px;
+    top: 180px;
     text-align: right;
     align-items: center;
     font-size: 65px;
@@ -35,8 +35,8 @@
 .banner-details {
     position: absolute;
     height: 78px;
-    left: 850px;
-    top: 468px;
+    left: 750px;
+    top: 420px;
     font-family: 'Work Sans';
     font-weight: 500;
     font-size: 16px;
@@ -48,12 +48,50 @@
 .btn-contact {
     position: absolute;
     padding: 10px 30px;
-    left: 1180px;
-    top: 578px;
+    left: 1080px;
+    top: 520px;
     color: #005FAC;
     font-family: 'Work Sans';
     font-weight: 600;
     line-height: 23px;
     border: 0;
     border-radius: 10px;
+}
+
+/* Failures Part */
+.person-img {
+    position: absolute;
+    width: 500px;
+    height: 600px;
+    left: 200px;
+    top: 800px;
+
+}
+
+.failure-details {
+    position: absolute;
+    left: 800px;
+    top: 900px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 700;
+    color: #151414;
+}
+
+.failure-text {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    margin-top: 20px;
+    color: #444343;
+}
+
+.failure-list {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 15px;
+    color: #444343;
+    padding-top: 20px;
 }
