--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 .banner {
     background-image: url('../images/banner/banner3.png');
     background-size: cover;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height: 700px;
     left: 0px;
@@ -19,28 +19,23 @@
 }
 
 .banner-text {
-    position: absolute;
-    height: 228px;
-    left: 750px;
-    top: 180px;
+    padding-top: 180px;
+    padding-right: 130px;
     text-align: right;
-    align-items: center;
-    font-size: 65px;
+    font-size: 50px;
     font-family: 'Work Sans';
     font-weight: 700;
-    line-height: 76px;
+    line-height: 60px;
     color: #FFFFFF;
 }
 
 .banner-details {
-    position: absolute;
-    height: 78px;
-    left: 750px;
-    top: 420px;
+    padding-right: 130px;
+    padding-top: 15px;
     font-family: 'Work Sans';
     font-weight: 500;
     font-size: 16px;
-    line-height: 26px;
+    line-height: 24px;
     text-align: right;
     color: #FFFFFF;
 }
@@ -48,30 +43,29 @@
 .btn-contact {
     position: absolute;
     padding: 10px 30px;
-    left: 1080px;
-    top: 520px;
+    left: 1085px;
+    top: 470px;
     color: #005FAC;
     font-family: 'Work Sans';
     font-weight: 600;
     line-height: 23px;
     border: 0;
     border-radius: 10px;
+    align-items: flex-end;
 }
 
 /* Failures Part */
-.person-img {
-    position: absolute;
-    width: 500px;
-    height: 600px;
-    left: 200px;
-    top: 800px;
 
+.failure {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 100px;
 }
 
 .failure-details {
-    position: absolute;
-    left: 800px;
-    top: 900px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 700;
