--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,60 @@
     color: #444343;
     padding-top: 20px;
 }
+
+/* Plans Part */
+
+.plans-header {
+    text-align: center;
+    margin-top: 100px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 700;
+    line-height: 47px;
+    color: #151414;
+}
+
+.skills {
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+    padding-top: 50px;
+}
+
+.skill-align {
+    display: flex;
+    flex-direction: column;
+}
+
+.skill {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    text-align: center;
+    color: #151414;
+}
+
+.wants {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 500;
+    text-align: center;
+    color: #737272;
+}
+
+.image-one {
+    padding-left: 50px;
+}
+
+.image-two {
+    padding-left: 10px;
+}
+
+.image-third {
+    padding-left: 20px;
+}
+
+.image-fourth {
+    padding-left: 10px;
+}
