--- a/css/style.css
+++ b/css/style.css
@@ -108,11 +108,6 @@
     padding-top: 50px;
 }
 
-.skill-align {
-    display: flex;
-    flex-direction: column;
-}
-
 .skill {
     font-family: 'Work Sans';
     font-style: normal;
@@ -222,4 +217,35 @@
     font-size: 20px;
     font-family: 'Work Sans';
     font-weight: 700;
+}
+
+/*********************** Footer Part ************************/
+
+.footer-main {
+    width: 100%;
+    height: 577px;
+    background: #151414;
+}
+
+.footer-body {
+    color: #FFFFFF;
+    padding-top: 130px;
+    margin-left: 115px;
+}
+
+.footer-icon {
+    margin-left: 115px;
+}
+
+.subscribe-btn {
+    margin-left: 115px;
+    margin-top: 30px;
+    padding: 12px 30px;
+    color: #FFFFFF;
+    background: #005FAC;
+    font-family: 'Work Sans';
+    font-weight: 600;
+    line-height: 23px;
+    border: 0;
+    border-radius: 10px;
 }
